--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: python
-
+python:
+  - 2.7
+install:
+  - pip install -r requirements.txt
+  - pip install coveralls
 script:
-- pip freeze
-- nosetests
+  - pip freeze
+  - coverage run --source=oprex nosetests
+after_success:
+  coveralls
+
+
