TravisCI config: fix coveralls config
regex.py was renamed to __init__.py (package-style naming) but the coveralls config was not updated.
This commit fixes that.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install coveralls
 script:
   - pip freeze
-  - coverage run --source=oprex,parsetab,tests tests.py
+  - coverage run --source=__init__,parsetab,tests tests.py
 after_success:
   coveralls
 
